--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>Video Autoplay</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden; /* Oculta cualquier barra de scroll */
+      background: black;
+      width: 100%;
+      height: 100%;
+    }
+
+    .container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+    }
+
+    video {
+      width: 1280px;
+      height: 640px;
+      object-fit: cover;
+    }
+  </style>
 </head>
-<body style="margin: 0; background: black; display: flex; justify-content: center; align-items: center; height: 100vh;">
-  <video autoplay muted loop playsinline width="1280" height="640">
-    <source src="Petromotors.mp4" type="video/mp4">
-    Tu navegador no soporta video HTML5.
-  </video>
+<body>
+  <div class="container">
+    <video autoplay muted loop playsinline>
+      <source src="Petromotors.mp4" type="video/mp4">
+      Tu navegador no soporta video HTML5.
+    </video>
+  </div>
 </body>
 </html>
