--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <div class="container">
-    <video autoplay muted loop playsinline>
+    <video autoplay muted loop playsinline preload="auto">
       <source src="Petromotors.mp4" type="video/mp4">
       Tu navegador no soporta video HTML5.
     </video>
